Issue 149: Implement off-heap cache storage (#151)
* Issue 149: Implement off-heap cache storage
* Remove empty file
* fix refcounts
* More clean up
* more debug
* Add test case and restore CacheClient API